# knots

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MERGE_CONFLICT_AUTO_RESOLUTION.md  Makefile  README.md  SECURITY.md  clippy.toml  full_workflow.md  install.sh  knots-architecture-v4.md  package-lock.json  package.json
.changeset/: README.md  acceptance-field.md  add-version-check-to-doctor.md  auto-resolve-terminal-parents.md  claim-peek-flag.md  cli-test-binary-lookup.md  deferred-sync.md  deferred-terminal-cascade.md  doctor-skills-fix.md  doctor-stale-hooks.md  fix-hooks-deadlock.md  fix-sync-push-hooks.md  fix-terminal-cascade-all-terminal.md  hierarchy-state-guard.md  invariants-and-skill-audit.md  knots-97eb-doctor-drift.md  lease-threading.md  legacy-empty-lease-data.md  loom-compat-builtin.md  loom-compat-cli-feedback.md  loom-compat-cli-scaffolding.md  loom-compat-harness.md  m2-7-field-parity.md  managed-knots-skills.md  minor-bump.md  named-projects.md  next-completion-and-actor-metadata.md  parent-knot-prompt-guidance.md  pin-rust-toolchain-sanity.md  pre-m3-release-infra.md  prompt-boundaries.md  refining-skills.md  release-0-6-0.md  release-0-7-1.md  release-0-7-2.md  release-0-7-3.md  release-0.12.0.md  release-extras.md  release-v0-13-0.md  release-v0-14-0.md  (+8 more)
.ci/: oversized-files.txt
.knots/: workflows.toml
docs/: leases.md  portfolio-plan.md
scripts/: README.md
skills/: README.md  evaluating.md  implementation.md  implementation_review.md  knots.md  knots_e2e.md  plan_review.md  planning.md  (+2 more)
(+10107 files in other folders)
