[package]
name = "knots"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1.8", features = ["v7"] }
clap_complete = "4.5"
